# pcb

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.cvs  README.snapshots  acinclude.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  globalconst.h  mkinstalldirs  pcb.spec.in
README_FILES/: Makefile  Makefile.am  Makefile.in
bitmaps/: Makefile  Makefile.am  Makefile.in  arc_mode.xbm  buffer_mode.xbm  icon.xbm  insert_mode.xbm  line_mode.xbm  lock_mode.xbm  mode_icon.xbm  pan_mode.xbm  polygon_mode.xbm  rectangle_mode.xbm  remove_mode.xbm  rotate_mode.xbm  select_mode.xbm  text_mode.xbm  thermal_mode.xbm  via_mode.xbm
doc/: Makefile  Makefile.am  Makefile.in  Xdefaults.tgif  commands_sorted.txt  mdate-sh  pcb.1  pcb.dvi  pcb.info  pcb.info-1  pcb.info-2  pcb.info-3  pcb.info-4  pcb.info-5  pcb.info-6  pcb.man.in  pcb.man.raw  pcb.ps  pcb.texi  refcard.ps  refcard.tex  version.texi  wishlist.txt
doc/pcb.html/: Actions.html  BSD.html  Basic-Types.html  DEC-Alpha.html  Element-File.html  File-Formats.html  Font-File.html  HP.html  Index.html  Layout-File.html  Library-Contents-File.html  Library-Creation.html  Library-File.html  Line-Objects.html  Linux.html  Netlist-File.html  Regular-Expressions.html  SCO.html  SGI.html  Schematic-Frontends.html  Sun.html  TeX-and-Manuals.html  Translations.html  Vendor-drill-mapping.html  X11.html  compiling.html  gEDA.html  problems.html  quickstart.html  running-configure.html  xcircuit.html
example/: Makefile  Makefile.am  Makefile.in
example/libraries/: Makefile  Makefile.am  Makefile.in  example.inc  example.m4
lib/: CreateLibrary.sh  CreateLibrary.sh.in  CreateLibraryContents.sh  CreateLibraryContents.sh.in  ListLibraryContents.sh  Makefile  Makefile.am  Makefile.in  QueryLibrary.sh  QueryLibrary.sh.in  TTL_74xx_DIL.list  TTL_74xx_DIL.m4  amp.inc  amphenol.inc  amphenol.list  amphenol.m4  bourns.inc  common.m4  connector.inc  connector.inc.0405  connector.list  connector.m4  connector.m4.0405  crystal.list  crystal.m4  cts.inc  dil.inc  geda.inc  geda.list  geda.m4  gen_geda_list.awk  gen_geda_m4.awk  gen_list.awk  gen_m4.awk  generic.list  generic.m4  genericsmt.list  genericsmt.m4  jerry.list  jerry.m4  (+38 more)
newlib/: Makefile  Makefile.am  Makefile.in
newlib/2_pin_thru-hole_packages/: 1N4001_Diode  CK05_type_Capacitor  CK06_type_Capacitor  Makefile  Makefile.am  Makefile.in  radial_cap_250mil  radial_cap_320mil  radial_cap_400mil  radial_cap_500mil  radial_cap_640mil  radial_cap_720mil
newlib/analog/: Makefile  Makefile.am  Makefile.in  PVG3A_Trimmer  SOT23-5  TO-220  TO-92
newlib/connectors/: 40pin_CardBus  62pin_HiDensity_DSub  AMP_BNC_vertical_round_base  AMP_BNC_vertical_square_base  EdgeSMA  KykonMini_DC_KLD0101A  Makefile  Makefile.am  Makefile.in  RightAngleBNC
newlib/crystal/: Makefile  Makefile.am  Makefile.in
newlib/electro-optics/: Agilent_HCNR_200-201  Makefile  Makefile.am  Makefile.in
newlib/fuse/: Cooper-Bussman-504HBVI  Makefile  Makefile.am  Makefile.in
newlib/generic_SMD_packages/: 40pinLCC  Makefile  Makefile.am  Makefile.in
newlib/headers/: Makefile  Makefile.am  Makefile.in  Phoenix_5.08mm_4pin_header
newlib/not_vetted/: Makefile  Makefile.am  Makefile.in
newlib/relays/: Makefile  Makefile.am  Makefile.in  Omron_G6RN1  Omron_G6Z1FEA  Omron_G6Z1PE
newlib/switch/: Makefile  Makefile.am  Makefile.in  e_switch_320  mountain_switch_6mm
newlib/tests/: Makefile  Makefile.am  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  Pcb  Pcb.ad.in  Pcb.ad.raw  Pcb.ad.small  action.c  action.h  actionlist.c  autoplace.c  autoplace.h  autoroute.c  autoroute.h  box.h  buffer.c  buffer.h  change.c  change.h  clip.c  clip.h  command.c  command.h  compat.c  compat.h  const.h  control.c  control.h  copy.c  copy.h  create.c  create.h  crosshair.c  crosshair.h  data.c  data.h  dev_ps.c  dev_ps.h  dev_rs274x.c  dev_rs274x.h  (+110 more)
src/.deps/: .cvsignore  action.Po  actionlist.Po  autoplace.Po  autoroute.Po  buffer.Po  change.Po  clip.Po  command.Po  compat.Po  control.Po  copy.Po  create.Po  crosshair.Po  data.Po  dev_ps.Po  dev_rs274x.Po  dialog.Po  djopt.Po  draw.Po  drill.Po  error.Po  file.Po  fileselect.Po  find.Po  gui.Po  heap.Po  insert.Po  intersect.Po  lgdialog.Po  library.Po  line.Po  log.Po  main.Po  menu.Po  mirror.Po  misc.Po  move.Po  mtspace.Po  mymem.Po  (+26 more)
src/.test/: Pcb
src/script/: Makefile  Makefile.am  Makefile.in  pcb.in
tcltk/: .cvsignore  Makefile  Makefile.am  Makefile.in  commands_sorted.txt  console.tcl  pcb.sh.m4  pcb.tcl  pcb.tcl.m4  pcb_init.tcl  pcbexec  pcbexec.c  resource.tcl  symbol.map  tclcommandAF.c  tclcommandGM.c  tclcommandNO.c  tclcommandPR.c  tclcommandSZ.c  tclpcb.c  tclpcb.h  tkSimple.c  tkcon.tcl
tcltk/.deps/: .cvsignore  pcbexec.Po  tclcommandAF.Po  tclcommandGM.Po  tclcommandNO.Po  tclcommandPR.Po  tclcommandSZ.Po  tclpcb.Po  tkSimple.Po
tools/: Makefile  Makefile.am  Makefile.in  MergePCBPS  Merge_dimPCBPS
tutorial/: Makefile  Makefile.am  Makefile.in
