## $Id: Makefile.am,v 1.1.1.1 2006/04/10 22:05:23 tim Exp $
##

pcblibsubdir= @PCBTREEDIR@/2_pin_thru-hole_packages
pcblibsub_DATA= ${COMPONENTS}
COMPONENTS= \
	0.125W_Carbon_Resistor \
	1N4001_Diode \
	1W_Carbon_Resistor \
	CK05_type_Capacitor \
	CK06_type_Capacitor \
	radial_cap_250mil \
	radial_cap_320mil \
	radial_cap_400mil \
	radial_cap_500mil \
	radial_cap_640mil \
	radial_cap_720mil \
	IRU1015-33CT_3.3V_reg_TO220 \
	RN55_type_0.1W_Resistor \
	T1.75_LED 

EXTRA_DIST= ${COMPONENTS}

