## $Id: Makefile.am,v 1.1.1.1 2006/04/10 22:05:22 tim Exp $
##

pcblibsubdir= @PCBTREEDIR@/connectors
pcblibsub_DATA= ${COMPONENTS}
COMPONENTS= \
	100_Pin_jack \
	16x1_SMD_jack \
	3terminal_screw_block \
	40pin_CardBus \
	72pin45degreeSIMMconnector \
	AMP_BNC_vertical_round_base \
	AMP_BNC_vertical_square_base \
	EdgeSMA \
	KykonMini_DC_KLD0101A \
	MOLEX_miniFitJr-12pin \
	Power_Jack \
	RightAngleBNC \
	RightAngleSMA \
	SJ-3523-SMT_3.5mm_stereo_jack 

EXTRA_DIST= ${COMPONENTS}

